crates/main/amethystate/tests/snapshots/error_reports__decode_wrong_type_db.snap
---
source: crates/main/amethystate/tests/error_reports.rs
expression: shape(&err)
---
the value could not be encoded or decoded
├╴as: u16
├╴value bytes: 14
│
├─▶ Erased codec error: invalid type: string "not a number", expected u16 at line 1 column 14
│   
│   	a number"
│   	........^
│
╰─▶ invalid type: string "not a number", expected u16 at line 1 column 14
    
    	a number"
    	........^
