crates/main/amethystate/tests/snapshots/error_reports__empty_level.snap
---
source: crates/main/amethystate/tests/error_reports.rs
expression: shape(&err)
---
a name that cannot be a level
│
╰─▶ level 1 of the path has no name
